[gd_scene format=3 uid="uid://bwggrf7sbmkcv"]

[ext_resource type="Script" uid="uid://d3s8yxuvpmekm" path="res://addons/PlayerCharacter/StateMachine/PlayerCharacterScript.gd" id="1_h128t"]
[ext_resource type="Script" uid="uid://b0fbr48rbvn27" path="res://addons/PlayerCharacter/Camera/CameraScript.gd" id="2_x12n0"]
[ext_resource type="Shader" uid="uid://q22f8mg3uo01" path="res://addons/PlayerCharacter/Vignette.gdshader" id="12_17hed"]
[ext_resource type="Script" uid="uid://dx02l6p6behb8" path="res://addons/PlayerCharacter/UI/HUDScript.gd" id="16_5jm78"]
[ext_resource type="FontFile" uid="uid://bwr73i28ligrq" path="res://addons/Arts/Ticketing.ttf" id="17_ryxgj"]
[ext_resource type="Script" uid="uid://sca7ypsol83f" path="res://addons/PlayerCharacter/StateMachine/StateMachineScript.gd" id="54_e0r17"]
[ext_resource type="Script" uid="uid://stil4xkf3tk0" path="res://addons/PlayerCharacter/StateMachine/IdleStateScript.gd" id="55_dayh2"]
[ext_resource type="Script" uid="uid://blt7dest23fk0" path="res://addons/PlayerCharacter/StateMachine/WalkStateScript.gd" id="56_w3td4"]
[ext_resource type="Script" uid="uid://5gk47o641xgt" path="res://addons/PlayerCharacter/StateMachine/RunStateScript.gd" id="57_gwv0a"]
[ext_resource type="Script" uid="uid://dvu58wf01wils" path="res://addons/PlayerCharacter/StateMachine/JumpStateScript.gd" id="58_gwv0a"]
[ext_resource type="Script" uid="uid://bh3rdvokmrar1" path="res://addons/PlayerCharacter/StateMachine/InairStateScript.gd" id="59_bqtt6"]
[ext_resource type="Script" uid="uid://bhoqhv7escpyx" path="res://addons/PlayerCharacter/StateMachine/CrouchStateScript.gd" id="60_tu3bf"]

[sub_resource type="Curve" id="Curve_2tsxa"]
_limits = [10.0, 30.0, 0.0, 60.0]
_data = [Vector2(0, 10), 0.0, 0.0, 0, 0, Vector2(60, 30), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_br1r7"]
_limits = [3.0, 30.0, 0.0, 30.0]
_data = [Vector2(0, 3), 0.0, 0.0, 0, 0, Vector2(30, 30), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5yjma"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6bkys"]
albedo_color = Color(0.196078, 0.223529, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_p2iaj"]

[sub_resource type="LabelSettings" id="LabelSettings_4e1aq"]
line_spacing = 5.0
font = ExtResource("17_ryxgj")
font_size = 30
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3aho1"]
line_spacing = 5.0
font = ExtResource("17_ryxgj")
font_size = 30
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ypkm2"]
shader = ExtResource("12_17hed")
shader_parameter/radius = 1.2470000592325001
shader_parameter/softness = 1.458000069255
shader_parameter/R = 0.0
shader_parameter/G = 0.0
shader_parameter/B = 0.0
shader_parameter/strength = 0.0
shader_parameter/maxOpacity = 0.3

[node name="PlayerCharacter" type="CharacterBody3D" unique_id=1059784548 groups=["PlayerCharacter"]]
collision_layer = 2
floor_block_on_wall = false
floor_max_angle = 1.13446
floor_snap_length = 0.0
platform_floor_layers = 4278190081
script = ExtResource("1_h128t")
desiredMoveSpeedCurve = SubResource("Curve_2tsxa")
maxSpeed = 30.0
inAirMoveSpeedCurve = SubResource("Curve_br1r7")
hitGroundCooldown = 0.2
bunnyHopDmsIncre = 3.0
baseHitboxHeight = 2.0
baseModelHeight = 1.0
heightChangeSpeed = 10.0
crouchSpeed = 5.0
crouchAccel = 7.0
crouchDeccel = 7.0
crouchHitboxHeight = 1.2
crouchModelHeight = 0.6
walkSpeed = 8.0
walkAccel = 8.0
walkDeccel = 8.0
runSpeed = 12.0
runAccel = 5.0
runDeccel = 5.0
jumpHeight = 2.0
jumpTimeToPeak = 0.3
jumpTimeToFall = 0.24
jumpCooldown = 0.2
nbJumpsInAirAllowed = 1
coyoteJumpCooldown = 0.3
moveForwardAction = "move_forward"
moveBackwardAction = "move_backward"
moveLeftAction = "move_left"
moveRightAction = "move_right"
runAction = "run"
crouchAction = "crouch"
jumpAction = "jump"

[node name="StateMachine" type="Node" parent="." unique_id=1723269194 node_paths=PackedStringArray("initialState")]
script = ExtResource("54_e0r17")
initialState = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" unique_id=798245843]
script = ExtResource("55_dayh2")
metadata/_custom_type_script = "uid://stil4xkf3tk0"

[node name="CrouchState" type="Node" parent="StateMachine" unique_id=1373785125]
script = ExtResource("60_tu3bf")
metadata/_custom_type_script = "uid://bhoqhv7escpyx"

[node name="WalkState" type="Node" parent="StateMachine" unique_id=474807336]
script = ExtResource("56_w3td4")
metadata/_custom_type_script = "uid://blt7dest23fk0"

[node name="RunState" type="Node" parent="StateMachine" unique_id=826901938]
script = ExtResource("57_gwv0a")
metadata/_custom_type_script = "uid://5gk47o641xgt"

[node name="JumpState" type="Node" parent="StateMachine" unique_id=533703432]
script = ExtResource("58_gwv0a")
metadata/_custom_type_script = "uid://dvu58wf01wils"

[node name="InairState" type="Node" parent="StateMachine" unique_id=1786744396]
script = ExtResource("59_bqtt6")
metadata/_custom_type_script = "uid://bh3rdvokmrar1"

[node name="CameraHolder" type="Node3D" parent="." unique_id=364209427]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.55, 0)
script = ExtResource("2_x12n0")
XAxisSensibility = 0.05
YAxisSensibility = 0.05
maxUpAngleView = -90.0
maxDownAngleView = 90.0
startFOV = 90.0
runFOV = 100.0
rageDelta = 30.0
focusDelta = 30.0
fovTransitionSpeed = 6.2
baseCameraLerpSpeed = 8.0
crouchCameraLerpSpeed = 8.0
crouchCameraDepth = -0.6
runBobFrequency = 0.9
walkBobFrequency = 0.8
camTiltRotationValue = 0.35
camTiltRotationSpeed = 2.2
onFloorTiltValDivider = 1.6
mouseModeAction = "mouse_mode"

[node name="Camera" type="Camera3D" parent="CameraHolder" unique_id=537518546]
cull_mask = 3
current = true
fov = 90.0
near = 0.01
far = 1000.0

[node name="Hitbox" type="CollisionShape3D" parent="." unique_id=1627935508]
shape = SubResource("CapsuleShape3D_5yjma")

[node name="Model" type="MeshInstance3D" parent="." unique_id=493745082]
layers = 2
material_override = SubResource("StandardMaterial3D_6bkys")
mesh = SubResource("CapsuleMesh_p2iaj")

[node name="Raycasts" type="Node3D" parent="." unique_id=476714351]

[node name="CeilingCheck" type="RayCast3D" parent="Raycasts" unique_id=818041699]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.758088, 0)
exclude_parent = false
target_position = Vector3(0, 3, 0)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="FloorCheck" type="RayCast3D" parent="Raycasts" unique_id=1943875678]
exclude_parent = false
target_position = Vector3(0, -3, 0)
debug_shape_custom_color = Color(0, 0, 0.956863, 1)

[node name="HUD" type="CanvasLayer" parent="." unique_id=1018343421]
script = ExtResource("16_5jm78")
metadata/_edit_use_anchors_ = true

[node name="Crosshair" type="CenterContainer" parent="HUD" unique_id=105116598]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.5
offset_top = -17.0
offset_right = 11.5
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Crosshair" unique_id=18516616]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/Crosshair/VBoxContainer" unique_id=361895044]
layout_mode = 2
size_flags_horizontal = 4

[node name="ColorRect" type="ColorRect" parent="HUD/Crosshair/VBoxContainer/HBoxContainer2" unique_id=709263389]
custom_minimum_size = Vector2(5, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Crosshair/VBoxContainer" unique_id=1724037272]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HUD/Crosshair/VBoxContainer/HBoxContainer" unique_id=1917191646]
custom_minimum_size = Vector2(10, 5)
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="HUD/Crosshair/VBoxContainer/HBoxContainer" unique_id=1312126609]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="ColorRect3" type="ColorRect" parent="HUD/Crosshair/VBoxContainer/HBoxContainer" unique_id=1242071181]
custom_minimum_size = Vector2(10, 5)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="HUD/Crosshair/VBoxContainer" unique_id=77005453]
layout_mode = 2
size_flags_horizontal = 4

[node name="ColorRect" type="ColorRect" parent="HUD/Crosshair/VBoxContainer/HBoxContainer3" unique_id=659908366]
custom_minimum_size = Vector2(5, 10)
layout_mode = 2

[node name="PlayCharInfos" type="HBoxContainer" parent="HUD" unique_id=1745032620]
offset_top = 7.0
offset_right = 804.0
offset_bottom = 357.0
scale = Vector2(0.7, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/PlayCharInfos" unique_id=925861571]
layout_mode = 2

[node name="CurrentStateLabel" type="Label" parent="HUD/PlayCharInfos/VBoxContainer" unique_id=322602197]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Current state : "
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="DesiredMoveSpeedLabel" type="Label" parent="HUD/PlayCharInfos/VBoxContainer" unique_id=691400678]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Desired move speed : "
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="VelocityLabel" type="Label" parent="HUD/PlayCharInfos/VBoxContainer" unique_id=1069625476]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Velocity : "
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="NbJumpsInAirAllowedLabel" type="Label" parent="HUD/PlayCharInfos/VBoxContainer" unique_id=356071274]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Nb jumps in air allowed :"
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="RageFocus" type="Label" parent="HUD/PlayCharInfos/VBoxContainer" unique_id=553904904]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Rage/Focus :"
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="TimeScale" type="Label" parent="HUD/PlayCharInfos/VBoxContainer" unique_id=1511625185]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Time Scale :"
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/PlayCharInfos" unique_id=1305083268]
layout_mode = 2

[node name="CurrentStateLabelText" type="Label" parent="HUD/PlayCharInfos/VBoxContainer2" unique_id=465344087]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1

[node name="DesiredMoveSpeedLabelText" type="Label" parent="HUD/PlayCharInfos/VBoxContainer2" unique_id=1487309911]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1

[node name="VelocityLabelText" type="Label" parent="HUD/PlayCharInfos/VBoxContainer2" unique_id=1374617481]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1

[node name="NbJumpsInAirAllowedLabelText" type="Label" parent="HUD/PlayCharInfos/VBoxContainer2" unique_id=1774290363]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1

[node name="RageFocusLabelText" type="Label" parent="HUD/PlayCharInfos/VBoxContainer2" unique_id=1847577072]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1

[node name="TimeScaleLabelText" type="Label" parent="HUD/PlayCharInfos/VBoxContainer2" unique_id=804896559]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "..................."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1

[node name="PlayCharInfos2" type="HBoxContainer" parent="HUD" unique_id=2086949617]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -259.0
offset_top = 13.0
offset_right = 99.0
offset_bottom = 43.0
grow_horizontal = 0
scale = Vector2(0.7, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/PlayCharInfos2" unique_id=348915097]
layout_mode = 2

[node name="FramesPerSecondLabel" type="Label" parent="HUD/PlayCharInfos2/VBoxContainer" unique_id=2012913357]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Frames per seconds : "
label_settings = SubResource("LabelSettings_4e1aq")
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/PlayCharInfos2" unique_id=743059293]
layout_mode = 2

[node name="FramesPerSecondLabelText" type="Label" parent="HUD/PlayCharInfos2/VBoxContainer2" unique_id=679077512]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "....."
label_settings = SubResource("LabelSettings_3aho1")
vertical_alignment = 1

[node name="RageFocusFilter" type="ColorRect" parent="HUD" unique_id=1234005094]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ypkm2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
